layout problem solved

--- a/src/components/Layouts/style.module.css
+++ b/src/components/Layouts/style.module.css
@@ -1,5 +1,4 @@
 .content {
-  height: 90vh;
   width: 100%;
   padding-left: 32rem !important;
   padding-right: 2rem !important;
